--- a/frontend/app.json
+++ b/frontend/app.json
@@ -33,6 +33,30 @@
           "resizeMode": "contain",
           "backgroundColor": "#007AFF"
         }
+      ],
+      [
+        "@mj-studio/react-native-naver-map",
+        {
+          "client_id": "swbufm4nxk",
+          "android": {
+            "ACCESS_FINE_LOCATION": true,
+            "ACCESS_COARSE_LOCATION": true
+          },
+          "ios": {
+            "NSLocationAlwaysUsageDescription": "{{ your location usage description }}",
+            "NSLocationWhenInUseUsageDescription": "{{ your location usage description }}"
+          }
+        }
+      ],
+      [
+        "expo-build-properties",
+        {
+          "android": {
+            "extraMavenRepos": [
+              "https://repository.map.naver.com/archive/maven"
+            ]
+          }
+        }
       ]
     ],
     "experiments": {
