--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint"
   },
@@ -20,6 +20,7 @@
     "expo": "~53.0.20",
     "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "~14.1.5",
+    "expo-build-properties": "^0.14.8",
     "expo-calendar": "^14.1.4",
     "expo-camera": "^16.1.11",
     "expo-constants": "~17.1.7",
