Implement permission of current location in ios and  move camera to current location

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -9,8 +9,14 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
+      "deploymentTarget": "13.0",
       "supportsTablet": true,
-      "bundleIdentifier": "com.anonymous.jca"
+      "bundleIdentifier": "com.coma.jca",
+      "infoPlist": {
+        "NSLocationWhenInUseUsageDescription": "이 앱은 현재 위치를 확인하여 주변 주차장을 찾기 위해 위치 정보를 사용합니다.",
+        "NSLocationAlwaysAndWhenInUseUsageDescription": "이 앱은 현재 위치를 확인하여 주변 주차장을 찾기 위해 위치 정보를 사용합니다.",
+        "NSCalendarsUsageDescription": "앱에서 일정을 관리하기 위해 캘린더 접근 권한이 필요합니다."
+      }
     },
     "android": {
       "adaptiveIcon": {
@@ -22,7 +28,7 @@
         "android.permission.ACCESS_FINE_LOCATION",
         "android.permission.ACCESS_COARSE_LOCATION"
       ],
-      "package": "com.anonymous.jca"
+      "package": "com.coma.jca"
     },
     "web": {
       "bundler": "metro",
@@ -31,6 +37,12 @@
     },
     "plugins": [
       "expo-router",
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "이 앱은 현재 위치를 확인하여 주변 주차장을 찾기 위해 위치 정보를 사용합니다."
+        }
+      ],
       [
         "expo-splash-screen",
         {
@@ -49,8 +61,8 @@
             "ACCESS_COARSE_LOCATION": true
           },
           "ios": {
-            "NSLocationAlwaysUsageDescription": "{{ your location usage description }}",
-            "NSLocationWhenInUseUsageDescription": "{{ your location usage description }}"
+            "NSLocationAlwaysUsageDescription": "이 앱은 현재 위치를 확인하여 주변 주차장을 찾기 위해 위치 정보를 사용합니다.",
+            "NSLocationWhenInUseUsageDescription": "이 앱은 현재 위치를 확인하여 주변 주차장을 찾기 위해 위치 정보를 사용합니다."
           }
         }
       ],
