--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,7 @@
     "@react-navigation/native": "^7.1.6",
     "expo": "~53.0.20",
     "expo-blur": "~14.1.5",
-    "expo-build-properties": "^0.14.8",
+    "expo-build-properties": "~0.14.8",
     "expo-calendar": "^14.1.4",
     "expo-camera": "^16.1.11",
     "expo-constants": "~17.1.7",
@@ -28,6 +28,7 @@
     "expo-image": "~2.4.0",
     "expo-image-picker": "^16.1.4",
     "expo-linking": "~7.1.7",
+    "expo-location": "^18.1.6",
     "expo-notifications": "^0.31.4",
     "expo-router": "~5.1.4",
     "expo-splash-screen": "~0.30.10",
