--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,1 +1,38 @@
+# 환경변수 파일
 .env
+.env.*
+.env.local
+.env.vpc
+
+# 의존성
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# 로그 파일
+*.log
+logs/
+
+# 임시 파일
+*.tmp
+*.temp
+
+# OS
+.DS_Store
+Thumbs.db
+
+# IDE
+.vscode/
+.idea/
+
+# 빌드 파일
+dist/
+build/
+
+# 인증키 파일
+*.pem
+*.key
+
+# VPC 배포 관련 임시 파일
+deploy-temp/
