--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "cron": "^4.3.0",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.44.2",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "sqlite3": "^5.1.7"
   }
 }
