--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.44.2",
     "express": "^5.1.0",
+    "firebase-admin": "^13.4.0",
     "sqlite3": "^5.1.7"
   }
 }
